--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,15 +12,10 @@
         <span><%= @product.quantity %> in stock at </span>
         <span><%= humanized_money_with_symbol @product.price %></span>
       </div>
-      <div class="soldout-btn">
-        <% if @product.quantity == 0 %>
-        <div class="soldout">Sold Out</div>
-        <%end %>
-        <div class="price">          
-          <%= button_to add_item_cart_path(product_id: @product.id),:disabled => @product.quantity == 0, class: 'btn' , method: :post do %>
-            <%= fa_icon "shopping-cart", text: 'Add' %>
-          <% end %>          
-        </div>
+      <div class="price">
+        <%= button_to add_item_cart_path(product_id: @product.id), class: 'btn' , method: :post do %>
+          <%= fa_icon "shopping-cart", text: 'Add' %>
+        <% end %>          
       </div>
     </div>
   </article>
