Complete Feature: Admin Dashboard - Counts

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<section class="admin-dashboard">
+  <h2>Admin Dashboard</h2>
+  <h5>Categories: <span class="badge bg-light text-dark"><%=@categories.count %></span></h5>
+  <h5>Products: <span class="badge bg-light text-dark"><%=@products.count %></span></h5> 
+</section>
