--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -39,6 +39,9 @@
               <%= link_to category.name, category, class: "nav-link" %>
             </li>
             <% end %>
+            <li class="nav-item">
+              <%= link_to 'About Us', abouts_path, class: 'nav-link' %>
+            </li>
           <%# </ul>
         </li> %>
       </ul>
