fix layout for about-us page

--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -4,28 +4,14 @@
       <div class="col-lg-6">
         <h1 class="display-4">About Us</h1>
         <p class="lead text-muted mb-0">Welcome to the Jungle!</p>
+        <p class="lead text-muted mb-0">Jungle is a hidden gem. With over 4 acres of farmland and a greenhouse full of tropical houseplants, we continue to operate Toronto’s last farm. We are family owned and operated Garden Centre.
+
+        What started out as a hobby, soon turned into our business. We are a Nursery that grows and sells a wide variety of plants for both indoor and outdoor application. Quality is of utmost priority to us, and our products reflect that.
+        
+        We are firm believers in one-on-one service. Our friendly and expert staff will take the time to help you find the right products to fit your needs, advise on plant care and maintenance, and more!</p>
         </p>
       </div>
-      <div class="col-lg-6 d-none d-lg-block"><img src="https://bootstrapious.com/i/snippets/sn-about/illus.png" alt="" class="img-fluid"></div>
-    </div>
-  </div>
-</div>
-
-<div class="bg-white py-5">
-  <div class="container py-5">
-    <div class="row align-items-center mb-5">
-      <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-        <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-        <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div>
-      <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="https://bootstrapious.com/i/snippets/sn-about/img-1.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
-    </div>
-    <div class="row align-items-center">
-      <div class="col-lg-5 px-5 mx-auto"><img src="https://bootstrapious.com/i/snippets/sn-about/img-2.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
-      <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
-        <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-        <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div>
+      <div class="col-lg-6 d-none d-lg-block"><img src="https://www.foodnavigator.com/var/wrbm_gb_food_pharma/storage/images/_aliases/wrbm_large/publications/food-beverage-nutrition/foodnavigator.com/news/market-trends/are-vertical-farms-even-remotely-efficient-putting-a-figure-on-plant-factories/9456865-1-eng-GB/Are-vertical-farms-even-remotely-efficient-Putting-a-figure-on-plant-factories.jpg" alt="" class="img-fluid"></div>
     </div>
   </div>
 </div>
