RSpec setup for Jungle

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -48,9 +48,9 @@
       <ul class="navbar-nav">
 
       <% if current_user %>
-      <li class="nav-item login-option">Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %></li>
+      <li class="nav-item">Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout', class: "nav-item login-option" %></li>
       <% else %>
-      <li class="nav-item login-option"><%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %></li>
+      <li class="nav-item"><%= link_to 'Login', '/login', class: "nav-item login-option" %> | <%= link_to 'Signup', '/signup', class: "nav-item login-option" %></li>
       <% end %>
 
         <li class="nav-item dropdown">
