--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -47,11 +47,15 @@
       </ul>
       <ul class="navbar-nav">
 
-      <% if current_user %>
-      <li class="nav-item">Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout', class: "nav-item login-option" %></li>
-      <% else %>
-      <li class="nav-item"><%= link_to 'Login', '/login', class: "nav-item login-option" %> | <%= link_to 'Signup', '/signup', class: "nav-item login-option" %></li>
-      <% end %>
+        <% if current_user %>
+          <li class="nav-item nav-link">Signed in as <%= current_user.name %></li>
+          <div class="nav-link">|</div>
+          <li class="nav-item nav-link"><%= link_to "Logout", '/logout', class: "nav-link login-option" %></li>
+        <% else %>
+          <li class="nav-item nav-link"><%= link_to 'Login', '/login', class: "login-option" %></li> 
+          <div class="nav-link">|</div>
+          <li class="nav-item nav-link"><%= link_to 'Signup', '/signup', class: "login-option" %></li>
+        <% end %>
 
         <li class="nav-item dropdown">
           <a
@@ -65,10 +69,11 @@
             Admin
           </a>
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
-            <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
+            <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-item" %></li>
+            <li><%= link_to 'Products', [:admin, :products], class: "nav-item" %></li>
           </ul>
         </li>
+        
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
